--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,11 @@
 *.tar.gz
 *.rar
 
+*/Servers/*
+*/targets/*
+/.metadata/*
+*.zip
+*/.settings
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
